# raytracer

./: CMakeLists.txt  default.nix  flake.nix  meson.build  shell.nix
src/: config.h  main.cpp  shapes.cpp  shapes.h  staging
src/shaders/: fragment.c  vertex.c
